fixes table heading alignment

--- a/public/css/mystyles.css
+++ b/public/css/mystyles.css
@@ -379,7 +379,7 @@ table th {
   vertical-align: top; }
   table td:not([align]),
   table th:not([align]) {
-    text-align: left; }
+    text-align: inherit; }
 
 table th {
   color: #363636; }
